--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9732,6 +9732,7 @@ groups:
     worlds:
       survival:
         permissions:
+        - essentials.fly
         - ch.alias.zatanna
         - -essentials.enchantments.allowunsafe
         - essentials.enchantments.*
@@ -9744,8 +9745,6 @@ groups:
         - ch.alias.run1
         - ch.alias.haste0
         - ch.alias.haste1
-        - ch.alias.hoveron
-        - ch.alias.hoveroff
   zeus:
     inheritance:
     - commonherotraits
@@ -9914,7 +9913,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - mortal
+    - spidermanpeterparker
     options:
       name: xDcGamer
     worlds:
@@ -10959,7 +10958,7 @@ users:
       name: JustKas
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
     group:
-    - wondergirl
+    - superman
     options:
       name: EmmettGaming
     worlds:
@@ -11305,7 +11304,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - iceman
+    - zion
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -12138,7 +12137,7 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - harleyquinn
+    - mortal
     options:
       name: SS_HarleyQuinn
       prefix: ''
@@ -12542,7 +12541,7 @@ users:
       name: WarrinPeace
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - mortal
+    - xtwothree
     options:
       name: Camulll
     permissions:
@@ -12908,7 +12907,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - mortal
+    - redlanternsupergirl
     options:
       name: _WonderBat_
     worlds:
@@ -14075,7 +14074,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - flashwallywest
+    - blacklanternmartianmanhunter
     options:
       name: nightghost2
     permissions:
@@ -14092,7 +14091,7 @@ users:
       name: MichaelPotter02
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group:
-    - vision
+    - darkseid
     options:
       name: TooFluffy
   05a43d17-2abf-46d0-a1dd-99527325eb00:
@@ -15211,7 +15210,8 @@ users:
     - blackadam
     options:
       name: SirRicardo
-    permissions: []
+    permissions:
+    - multiverse.access.underworld
   69a9802f-3ccf-4a91-b2b7-2fc8b9cf86ba:
     group:
     - deathstroke
@@ -15792,6 +15792,7 @@ users:
     - godspeed
     options:
       name: Like_A_Boss382
+    permissions: []
   d3d459ae-fda6-445b-a767-a0f0a27d94b8:
     group:
     - mortal
@@ -16153,12 +16154,12 @@ users:
       name: GreenArrowCW
   060e68a0-60cd-4cfe-b0f3-6d4beefd1b2e:
     group:
-    - mortal
+    - martianmanhunter
     options:
       name: HogoBojo
   38389a80-c4ff-4543-9e54-bdb989ebb83b:
     group:
-    - jessequick
+    - doctorstrange
     options:
       name: '547890'
   f450e303-755b-4eab-bda1-77743eae723e:
@@ -16324,12 +16325,12 @@ users:
       name: Sykaos
   cb234d7c-6ed5-4d5d-8f63-29e505cf5b5b:
     group:
-    - blacklanterneobardthawne
+    - darkseid
     options:
       name: xBrian1218
   8ab9ffd0-1541-4556-a486-9a9beed1371a:
     group:
-    - firestormraymondstein
+    - goldenfrieza
     options:
       name: xDoge21Ninjax
   2dac9ce7-63f8-40f4-b083-407faa20e1bd:
