--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -7756,7 +7756,7 @@ groups:
       survival:
         permissions:
         - weakto.kryptonite
-        - essentials.fly  
+        - essentials.fly
   redrobin:
     inheritance:
     - commonherotraits
@@ -12148,7 +12148,7 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - mortal
+    - harleyquinn
     options:
       name: SS_HarleyQuinn
       prefix: ''
