--- a/Essentials/spawn.yml
+++ b/Essentials/spawn.yml
@@ -8,11 +8,11 @@ spawns:
     pitch: 1.3499979
   newbies: 
     world: greenfield
-    x: -1738.5
-    y: 69.0
-    z: 199.5
-    yaw: 269.832
-    pitch: 0.7500028
+    x: -1712.5
+    y: 70.0
+    z: 130.5
+    yaw: -0.23398513
+    pitch: 1.3415639
   blueteampvpparkour: 
     world: pvpparkour
     x: -14.922116048432347
