--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10022,7 +10022,7 @@ users:
       name: TonyStarkIM
   0889f21e-b82c-49a0-ab3c-6e5b0232d093:
     group:
-    - mortal
+    - dormammu
     options:
       name: Oranges_are_glad
   08a6ea6d-f4cc-4ac5-9585-817b7290c33f:
@@ -10847,7 +10847,7 @@ users:
       name: dAnIeLnS
   59c423bf-2a7e-4fe2-8ac2-7393de01d583:
     group:
-    - captaincold
+    - redhood
     options:
       name: Boss90907
     permissions:
@@ -11185,7 +11185,7 @@ users:
       name: TheDoctor1213
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group:
-    - goku
+    - yellowlanternsinestro
     options:
       name: That_Panda_Guy
     permissions: []
@@ -11322,7 +11322,6 @@ users:
       suffix: ''
     permissions:
     - -powers.pointandclicklightning
-    - multiverse.access.underworld
     - escaperoom.bpass
     - -powers.wallrun
     - -powers.wallclimb
@@ -11925,7 +11924,7 @@ users:
       name: dragonmonkey2006
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     group:
-    - blueranger
+    - mortal
     options:
       name: Leo4Real
       prefix: ''
@@ -12148,7 +12147,7 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - harleyquinn
+    - mortal
     options:
       name: SS_HarleyQuinn
       prefix: ''
@@ -12225,7 +12224,7 @@ users:
     permissions: []
   e1e34998-0cba-4fb1-9bdf-f2969fbd9b39:
     group:
-    - mortal
+    - blacklanternmartianmanhunter
     options:
       name: Sinister_Slayer
   e1ee8717-532a-44c1-9927-9248e802db90:
@@ -12519,7 +12518,7 @@ users:
     options:
       name: SpyJay_YT
     group:
-    - superman
+    - blackspiderman
   fa3dc116-3188-4c27-8a2a-236981c20c4b:
     options:
       name: KittyTiger06
@@ -13960,7 +13959,7 @@ users:
       name: CookieMonsterr_
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group:
-    - powergirl
+    - parallaxentity
     options:
       name: TracyMusic
   99a2ad6c-fd75-47a2-8912-c4dc24f4b830:
@@ -14085,7 +14084,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - blacklanternmartianmanhunter
+    - flashwallywest
     options:
       name: nightghost2
     permissions:
@@ -14102,9 +14101,10 @@ users:
       name: MichaelPotter02
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group:
-    - darkseid
+    - firestormraymondstein
     options:
       name: TooFluffy
+    permissions: []
   05a43d17-2abf-46d0-a1dd-99527325eb00:
     group:
     - mortal
@@ -14112,7 +14112,7 @@ users:
       name: silentdeath098
   7a3d7316-9fb3-42e6-bb67-474383ba3df0:
     group:
-    - mew
+    - onepunchman
     options:
       name: birdie911
     permissions: []
@@ -14165,13 +14165,14 @@ users:
     group:
     - ironmanmkxliii
     options:
-      name: Donutssss
+      name: Malborshia_
     permissions: []
   29cd1cfe-bc4a-4c9c-af72-a5f984dffded:
     group:
-    - hephaestus
+    - darthsidious
     options:
       name: TheDiamonSKysYT
+    permissions: []
   412bfafd-7a98-4c90-ad33-c1ffe24b0b24:
     group:
     - cyborg
@@ -14184,7 +14185,7 @@ users:
       name: ccv3
   8cb964f5-d345-4a65-8811-cb3b0c11b51b:
     group:
-    - zoom
+    - goku
     options:
       name: Vengeance007
     permissions: []
@@ -15218,7 +15219,7 @@ users:
       name: DarthMathias
   bfc9e44d-4e70-4544-8628-df9ce9be1bfe:
     group:
-    - blackadam
+    - martianmanhunter
     options:
       name: SirRicardo
     permissions:
@@ -15490,7 +15491,7 @@ users:
     - multiverse.access.underworld
   98163bdb-968d-4a0e-96fd-10714ae78950:
     group:
-    - shazam
+    - blacklanternsolomongrundy
     options:
       name: septer101
   144fabad-e9ac-46f3-aa7d-aef5fbe24240:
@@ -16115,7 +16116,7 @@ users:
       name: SepticPanda45
   87bb4f34-8ea7-4e22-a9a6-8c157cf33b1e:
     group:
-    - mortal
+    - savitar
     options:
       name: MrGold4
   65f708f6-deb9-4fd3-99f7-c235dd2ce33a:
@@ -16331,14 +16332,14 @@ users:
       name: Bendoversonn
   278e50b6-c804-406b-9846-cd58dd14ef17:
     group:
-    - greengoblin
+    - bobafett
     options:
       name: Sykaos
   cb234d7c-6ed5-4d5d-8f63-29e505cf5b5b:
     group:
     - darkseid
     options:
-      name: xBrian1218
+      name: xTheFlash12x
   8ab9ffd0-1541-4556-a486-9a9beed1371a:
     group:
     - goldenfrieza
@@ -16351,7 +16352,7 @@ users:
       name: DarkDestroyer99
   b4129155-6f01-4394-9601-65855f47f54b:
     group:
-    - flashbarryallen
+    - supergirl
     options:
       name: claiiire
   b80c78e8-38cc-4c80-bcf0-bdf02fa099d1:
@@ -16374,6 +16375,21 @@ users:
     - ironmanmkxliii
     options:
       name: FrankiePlayzYT
+  0debb537-1b1f-4021-9c15-53faa9abfc8d:
+    group:
+    - inertiathaddeusthawneii
+    options:
+      name: KaphilkaPoesson
+  6839ecbb-efb2-4b03-86fd-570dde32afc9:
+    group:
+    - genos
+    options:
+      name: Centaurian19
+  f91b884a-723a-4663-aedf-bc41efd18907:
+    group:
+    - flashbarryallen
+    options:
+      name: TheBatmanPlayz
 worlds:
   checkers:
     inheritance:
