--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,4 +1,7 @@
-storage: {southmachine1: '6', northmachine2: '4', northmachine3: '5', southmachine3: '4',
-  southmachine2: '3', testID3: '0', testID1: '9', eastmachine1: '2', testID2: '7',
-  northmachine1: '5', westmachine1: '6', eastmachine3: '2', eastmachine2: '3', westmachine3: '6',
-  westmachine2: '6'}
+storage: {topleft1: '1', topleft2: '7', topleft3: '0', testID3: '0', testID1: '9',
+  topmiddle3: '0', testID2: '7', topmiddle2: '2', bottomleft1: '5', bottomright3: '1',
+  topmiddle1: '8', bottomright1: '6', bottomright2: '1', southmachine1: '6', bottomleft2: '9',
+  bottomleft3: '0', northmachine2: '4', northmachine3: '5', southmachine3: '4', southmachine2: '3',
+  eastmachine1: '2', topright3: '2', topright2: '0', topright1: '3', northmachine1: '5',
+  bottommiddle1: '6', bottommiddle2: '2', bottommiddle3: '1', westmachine1: '6', eastmachine3: '2',
+  eastmachine2: '3', westmachine3: '6', westmachine2: '6'}
