--- a/Essentials/warps/tekindustrieslaboratory.yml
+++ b/Essentials/warps/tekindustrieslaboratory.yml
@@ -1,7 +1,7 @@
 world: greenfield
-x: -1738.5
-y: 69.0
-z: 199.5
-yaw: 269.832
-pitch: 0.7500028
+x: -1712.5
+y: 70.0
+z: 130.5
+yaw: -0.17573383
+pitch: 1.3415639
 name: tekindustrieslaboratory
