--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9924,7 +9924,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - spidermanpeterparker
+    - wintersoldier
     options:
       name: xDcGamer
     worlds:
@@ -11486,7 +11486,7 @@ users:
       name: Hoggg
   96ef14ce-35ff-4de8-a600-a1d216c51bce:
     group:
-    - martianmanhunter
+    - batman
     options:
       name: andyyyyyyyyyy
   970c13e0-682b-43e5-8950-b680b932bffa:
@@ -12147,7 +12147,7 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - mortal
+    - quarantine
     options:
       name: SS_HarleyQuinn
       prefix: ''
@@ -14101,7 +14101,7 @@ users:
       name: MichaelPotter02
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group:
-    - firestormraymondstein
+    - martianmanhunter
     options:
       name: TooFluffy
     permissions: []
@@ -14112,7 +14112,7 @@ users:
       name: silentdeath098
   7a3d7316-9fb3-42e6-bb67-474383ba3df0:
     group:
-    - onepunchman
+    - mew
     options:
       name: birdie911
     permissions: []
@@ -14169,7 +14169,7 @@ users:
     permissions: []
   29cd1cfe-bc4a-4c9c-af72-a5f984dffded:
     group:
-    - darthsidious
+    - vision
     options:
       name: TheDiamonSKysYT
     permissions: []
@@ -14818,7 +14818,7 @@ users:
       name: AbdullahM40
   66aafff6-ce9f-483d-bb9e-6e09509a8f8f:
     group:
-    - martianmanhunter
+    - infinitysilversurfer
     options:
       name: Oreoy
     permissions: []
@@ -15494,6 +15494,10 @@ users:
     - blacklanternsolomongrundy
     options:
       name: septer101
+    worlds:
+      infiniteparkour:
+        permissions:
+        - essentials.build.*
   144fabad-e9ac-46f3-aa7d-aef5fbe24240:
     group:
     - mortal
@@ -15516,7 +15520,7 @@ users:
       name: Unicorn836YT
   55645190-8b50-479f-b9b0-09f02ca2a7c4:
     group:
-    - onepunchman
+    - mortal
     options:
       name: deg0deg0
     permissions:
@@ -15671,7 +15675,7 @@ users:
       name: _SuperGirl_
   dd02c537-5856-44e6-9ce9-0a72f1127ffc:
     group:
-    - godspeed
+    - onepunchman
     options:
       name: EnderBlaze360_
   4be630da-a5e8-4aa3-bd1c-32fe71565e4d:
@@ -16203,7 +16207,7 @@ users:
       name: CaptainColdCW
   265566f8-a39e-4357-8256-bed3660845ad:
     group:
-    - onepunchman
+    - mortal
     options:
       name: DaCybe
     permissions: []
