--- a/WorldGuard/worlds/infiniteparkour/regions.yml
+++ b/WorldGuard/worlds/infiniteparkour/regions.yml
@@ -15,7 +15,8 @@ regions:
         max: {x: 399.0, y: 255.0, z: 715.0}
         members: {}
         flags: {ice-form: deny, use: allow, invincible: allow, interact: allow}
-        owners: {}
+        owners:
+            unique-ids: [98163bdb-968d-4a0e-96fd-10714ae78950]
         type: cuboid
         priority: 0
     __global__:
