--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -16185,7 +16185,7 @@ users:
       name: IAmAGreatDueler
   3216a378-fb47-41c6-8bf3-e12bd3e68e19:
     group:
-    - mewtwo
+    - blacklanterneobardthawne
     options:
       name: firegirl8
     permissions:
