--- a/Magic/messages.yml
+++ b/Magic/messages.yml
@@ -34,3 +34,17 @@
 #   missile:
 #     name: Zap
 #     description: Zap somebody!
+
+spells:
+  rictusempra:
+    name: Rictusempra
+    description: Push your opponents back a little bit
+  expelliarmus:
+    name: Expelliarmus
+    description: Disarm your opponent
+  avadakadavra:
+    name: Avadakadavra
+    description: Killing Curse... enough said
+  crucio:
+    name: Crucio
+    description: Tortures your opponents
