--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,15 @@
 groups:
+  harrypotter: 
+     inheritance: 
+     - commonherotraits 
+     options: 
+       prefix: '&4Har&6ry &4Pot&6ter' 
+       suffix: '&6' 
+     worlds: 
+       survival: 
+         permissions: 
+         - ch.alias.invis 
+         - ch.alias.vis  
   iceman:
     inheritance:
     - commonherotraits
