--- a/Magic/messages.yml
+++ b/Magic/messages.yml
@@ -36,15 +36,15 @@
 #     description: Zap somebody!
 
 spells:
-  rictusempra:
+  push:
     name: Rictusempra
     description: Push your opponents back a little bit
-  expelliarmus:
+  disarm:
     name: Expelliarmus
     description: Disarm your opponent
-  avadakadavra:
+  superkill:
     name: Avadakadavra
     description: Killing Curse... enough said
-  crucio:
+  torture:
     name: Crucio
     description: Tortures your opponents
