--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9,7 +9,8 @@ groups:
        survival: 
          permissions: 
          - ch.alias.invis 
-         - ch.alias.vis  
+         - ch.alias.vis
+         - magic.commands.mgive
   iceman:
     inheritance:
     - commonherotraits
