--- a/CommandHelper/LocalPackages/commands/buffs/piccolo.yml
+++ b/CommandHelper/LocalPackages/commands/buffs/piccolo.yml
@@ -26,7 +26,7 @@
                 "/effect ". @plr ." 11 9999 3 true",
                 "/effect ". @plr ." 12 9999 1 true",
                 "/effect ". @plr ." 21 9999 19 true",
-                "/shot give ". @plr ." kiblast"
+                "/shot give ". @plr ." kiblast",
                 "/shot give ". @plr ." specialbeamcannon"            
             )
         )
