--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10020,7 +10020,7 @@ users:
       name: TonyStarkIM
   0889f21e-b82c-49a0-ab3c-6e5b0232d093:
     group:
-    - parallaxentity
+    - infinitysilversurfer
     options:
       name: Oranges_are_glad
     permissions: []
@@ -10388,7 +10388,7 @@ users:
       name: Omegaglade23
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - missmartian
+    - mortal
     options:
       name: Br0kenS0uls
     worlds:
@@ -12226,7 +12226,7 @@ users:
     permissions: []
   e1e34998-0cba-4fb1-9bdf-f2969fbd9b39:
     group:
-    - blacklanternmartianmanhunter
+    - spiderman2099
     options:
       name: Sinister_Slayer
   e1ee8717-532a-44c1-9927-9248e802db90:
@@ -12553,7 +12553,7 @@ users:
       name: WarrinPeace
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - hestia
+    - supergirl
     options:
       name: Camulll
     permissions:
@@ -12760,7 +12760,7 @@ users:
       name: Alittlebitrandom
   64572c10-48af-4f46-a706-aef5a6248140:
     group:
-    - cyborg
+    - lukecage
     options:
       name: Legobuilder122
   336f1d11-3eb7-4fe0-ab0c-87c0bc2ad87d:
@@ -14087,7 +14087,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - mortal
+    - spidermanpeterparker
     options:
       name: nightghost2
     permissions:
@@ -14188,7 +14188,7 @@ users:
       name: ccv3
   8cb964f5-d345-4a65-8811-cb3b0c11b51b:
     group:
-    - savitar
+    - hawkeye
     options:
       name: Vengeance007
     permissions: []
@@ -15223,7 +15223,7 @@ users:
       name: DarthMathias
   bfc9e44d-4e70-4544-8628-df9ce9be1bfe:
     group:
-    - martianmanhunter
+    - blacklanterndeathstormraymondrusch
     options:
       name: SirRicardo
     permissions:
@@ -15742,7 +15742,7 @@ users:
       name: jeditony7
   d30e937c-c916-4d85-9bf1-03ae0a837f48:
     group:
-    - blackracerwilliewalker
+    - mortal
     options:
       name: _AquaStorm_
   0e88e52e-2945-464e-b4ba-e1e162c6786d:
@@ -15941,7 +15941,7 @@ users:
       name: NoFearKing
   d39ddc52-5fdb-484e-8e0c-f538e7982bee:
     group:
-    - zatanna
+    - hawkgirl
     options:
       name: Eyemakid
   b23253de-b89d-4ea4-8f9d-f8eaee9e2c37:
