--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -25,15 +25,15 @@ groups:
         - ch.alias.jump3
         - ch.alias.jump4
         - ch.alias.jump5
-        - ch.alias.jump6  
+        - ch.alias.jump6
         - ch.alias.jump7
-        - ch.alias.jump8 
+        - ch.alias.jump8
         - ch.alias.haste0
         - ch.alias.haste1
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
-        - ch.alias.haste5  
+        - ch.alias.haste5
         - ch.alias.haste6
         - ch.alias.haste7
         - ch.alias.haste8
@@ -11352,12 +11352,14 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - zion
+    - piccolo
     options:
       name: God_Doesnt_Exist
       prefix: ''
       suffix: ''
     permissions:
+    - -mortal.machine
+    - -machine.mortal
     - powers.onepunch
     - -powers.fireballpunch
     - -powers.pointandclicklightning
@@ -14125,7 +14127,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - spidermanpeterparker
+    - nightcrawler
     options:
       name: nightghost2
     permissions:
@@ -16293,14 +16295,14 @@ users:
       name: manglestar
   85b76ef2-b488-4a6c-834b-118c28b7e77c:
     group:
-    - superman
+    - owlman
     options:
       name: 5up3rZ
     permissions:
     - multiverse.access.underworld
   690cffaf-03a1-4e16-a7bc-832cb49b523a:
     group:
-    - supergirl
+    - mortal
     options:
       name: Nyan_Kat_Girl
     permissions:
