--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8,6 +8,7 @@ groups:
     worlds:
       survival:
         permissions:
+        - essentials.fly       
         - ch.alias.run0
         - ch.alias.run1
         - ch.alias.run2
