--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8,7 +8,9 @@ groups:
     worlds:
       survival:
         permissions:
-        - essentials.fly       
+        - essentials.fly    
+        - essentials.speed.fly
+        - essentials.speed       
         - ch.alias.run0
         - ch.alias.run1
         - ch.alias.run2
