--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,5 +1,31 @@
-groups:
-  piccolo:
+hippolyta:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&'
+      suffix: '&6hi&4pp&fol&6ita'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.hippolyta
+        - ch.alias.carryplayer
+        - ch.alias.dismountplayer
+        - essentials.speed
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.haste0
+        - ch.alias.haste1
+        - ch.alias.haste2
+        - ch.alias.haste3
+        - ch.alias.haste4
+  piccolo: 
     inheritance:
     - commonherotraits
     options:
