--- a/Magic/messages.yml
+++ b/Magic/messages.yml
@@ -48,3 +48,36 @@ spells:
   torture:
     name: Crucio
     description: Tortures your opponents
+  pull:
+    name: Accio
+    description: Pulls things towards you
+  fling:
+    name: Ascendio
+    description: Sends you flying in the direction you cast
+  flare:
+    name: Periculum
+    description: Shoots flares
+  stun:
+    name: Stupefy
+    description: Stuns your opponent
+  reflect:
+    name: Protego
+    description: Blocks incoming projectiles
+  wound:
+    name: Sectumsempra
+    description: Wounds your target
+  petrify:
+    name: Petrificus Totalus
+    description: Petrifies your target
+  lift:
+    name: Levicorpus
+    description: Lifts your opponent into the air
+  fire:
+    name: Incendio
+    description: Lights fire from a distance
+  fireball:
+    name: Confringo
+    description: Shoots a fireball out of your wand
+  blink:
+    name: Apparate
+    description: Teleport where you point your wand
