--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,10 @@
 groups:
+  harrypotter:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&4Har&6ry &4Pot&6ter'
+      suffix: '&6'
   piccolo:
     inheritance:
     - commonherotraits
@@ -13679,7 +13685,7 @@ users:
       name: alonzealonso
   b09b6618-e035-4e1f-be4e-f01ec6888001:
     group:
-    - mortal
+    - captainatom
     options:
       name: Bcrulez
     permissions: []
@@ -14961,7 +14967,7 @@ users:
       name: JigglyJoy
   972d3bcd-87bc-4e35-a334-ad792dc8e260:
     group:
-    - mew
+    - hulk
     options:
       name: NINJA_SNIVY
   37865109-3065-4a6d-9549-0bef1ea65eea:
@@ -15539,7 +15545,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - dormammu
+    - harrypotter
     options:
       name: mythguy1226
     permissions:
@@ -16562,7 +16568,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - dannyphantom
+    - mortal
     options:
       name: HerpaDerp10000
     permissions:
