--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -2,8 +2,8 @@ hippolyta:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&'
-      suffix: '&6hi&4pp&fol&6ita'
+      prefix: '&6hi&4pp&fol&6ita'
+      suffix: '&6'
     worlds:
       survival:
         permissions:
