--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -2,7 +2,7 @@ hippolyta:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&6hi&4pp&fol&6ita'
+      prefix: '&6hi&4pp&fol&6yta'
       suffix: '&6'
     worlds:
       survival:
