--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9967,7 +9967,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - spidermanpeterparker
+    - ironfist
     options:
       name: xDcGamer
     worlds:
@@ -12604,7 +12604,7 @@ users:
       name: WarrinPeace
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - quarantine
+    - supergirl
     options:
       name: Camulll
     permissions:
@@ -13594,7 +13594,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - godspeed
+    - flashbarryallen
     options:
       name: CorruptRacer
   8804c5af-7861-4d3b-ae26-750b4cf93f25:
@@ -13685,7 +13685,7 @@ users:
       name: alonzealonso
   b09b6618-e035-4e1f-be4e-f01ec6888001:
     group:
-    - captainatom
+    - deadpool
     options:
       name: Bcrulez
     permissions: []
@@ -14142,7 +14142,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - spidermanpeterparker
+    - mortal
     options:
       name: nightghost2
     permissions:
@@ -14884,7 +14884,7 @@ users:
     permissions: []
   5f238a5f-3586-4e83-9338-c3533b5cf96f:
     group:
-    - bluelanternbarryallen
+    - vibe
     options:
       name: KingBull
     permissions: []
@@ -14967,7 +14967,7 @@ users:
       name: JigglyJoy
   972d3bcd-87bc-4e35-a334-ad792dc8e260:
     group:
-    - hulk
+    - mew
     options:
       name: NINJA_SNIVY
   37865109-3065-4a6d-9549-0bef1ea65eea:
@@ -15571,7 +15571,7 @@ users:
       name: epic_lord71
   3f97bfa3-8301-48b9-9d2e-07b328671293:
     group:
-    - firestormraymondstein
+    - hades
     options:
       name: 54wolfman
   8b1ea473-d238-4ae6-b52e-b26e38302df9:
@@ -15999,7 +15999,7 @@ users:
       name: NoFearKing
   d39ddc52-5fdb-484e-8e0c-f538e7982bee:
     group:
-    - hawkgirl
+    - spiderwomangwenstacy
     options:
       name: Eyemakid
   b23253de-b89d-4ea4-8f9d-f8eaee9e2c37:
@@ -16336,7 +16336,7 @@ users:
       name: Scrachy10
   5f6efde4-f0b6-44fd-8427-96098276c6b7:
     group:
-    - doctorstrange
+    - mortal
     options:
       name: Sam_Zylox
   3e7fdabe-e399-436a-beaa-2c3733af7ae9:
@@ -16568,7 +16568,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - mortal
+    - dannyphantom
     options:
       name: HerpaDerp10000
     permissions:
