--- a/Citizens/templates.yml
+++ b/Citizens/templates.yml
@@ -1,4 +1,4 @@
-hippolyta:
+hippolyta(dc):
   override: false
   replacements:
     traits:
@@ -29,7 +29,7 @@ hippolyta:
       usedefaultstuckaction: true
     uuid: c8b88131-52d4-4af0-9593-ddcdb3d56058    
     traitnames: spawned,type,inventory,owner,gravity,location
-    name: hippolyta
+    name: hippolyta(dc)
 piccolo:    
      override: false    
      replacements:    
