--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,14 +1,14 @@
 groups:
-  hippolyta:
+  hippolyta(dc):
     inheritance:
     - commonherotraits
     options:
-      prefix: '&6hi&4pp&fol&6yta'
+      prefix: '&6hi&4pp&fol&6yta&8(&6d&4c&8)'
       suffix: '&6'
     worlds:
       survival:
         permissions:
-        - ch.alias.hippolyta
+        - ch.alias.hippolyta(dc)
         - ch.alias.carryplayer
         - ch.alias.dismountplayer
         - essentials.speed
