--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,5 +1,5 @@
 groups:
-  hippolyta(dc):
+  hippolytadc:
     inheritance:
     - commonherotraits
     options:
@@ -8,7 +8,6 @@ groups:
     worlds:
       survival:
         permissions:
-        - ch.alias.hippolyta(dc)
         - ch.alias.carryplayer
         - ch.alias.dismountplayer
         - essentials.speed
