--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3,7 +3,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&6hi&4pp&fol&6yta&8(&6d&4c&8)'
+      prefix: '&6Hi&4pp&fol&6yta&8(&6D&4C&8)'
       suffix: '&6'
     worlds:
       survival:
