--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9967,7 +9967,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - ironfist
+    - spidermanpeterparker
     options:
       name: xDcGamer
     worlds:
@@ -12852,7 +12852,7 @@ users:
       name: ssgssgoku12345
   e67f0790-9bf4-4ba9-8faf-c4185dc5d8bd:
     group:
-    - spidermanpeterparker
+    - venom
     options:
       name: Predamorph1519
     permissions: []
@@ -12971,7 +12971,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - redlanternsupergirl
+    - doctormanhattan
     options:
       name: _WonderBat_
     worlds:
@@ -13685,7 +13685,7 @@ users:
       name: alonzealonso
   b09b6618-e035-4e1f-be4e-f01ec6888001:
     group:
-    - deadpool
+    - sentry
     options:
       name: Bcrulez
     permissions: []
@@ -14031,7 +14031,7 @@ users:
       name: ii_Ashura
   ae107f34-4831-49c2-bfe8-0974342077e0:
     group:
-    - spidermanmilesmorales
+    - hybrid
     options:
       name: FunCaptianrex
     permissions: []
@@ -14142,7 +14142,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - mortal
+    - savitar
     options:
       name: nightghost2
     permissions:
@@ -14884,7 +14884,7 @@ users:
     permissions: []
   5f238a5f-3586-4e83-9338-c3533b5cf96f:
     group:
-    - vibe
+    - bluelanternbarryallen
     options:
       name: KingBull
     permissions: []
@@ -14967,7 +14967,7 @@ users:
       name: JigglyJoy
   972d3bcd-87bc-4e35-a334-ad792dc8e260:
     group:
-    - mew
+    - percyjackson
     options:
       name: NINJA_SNIVY
   37865109-3065-4a6d-9549-0bef1ea65eea:
@@ -15212,7 +15212,7 @@ users:
       name: Khitzu
   286a6fb4-46f6-4d97-be53-eb89cc2ff65a:
     group:
-    - savitar
+    - martianmanhunter
     options:
       name: surferboy2004
     permissions: []
@@ -15418,7 +15418,7 @@ users:
       name: MCBawler
   debef98b-23ba-461c-847e-968b83f7c891:
     group:
-    - blackracerwilliewalker
+    - nightcrawler
     options:
       name: JackLauren1
     permissions:
@@ -15545,7 +15545,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - harrypotter
+    - carnage
     options:
       name: mythguy1226
     permissions:
@@ -15571,7 +15571,7 @@ users:
       name: epic_lord71
   3f97bfa3-8301-48b9-9d2e-07b328671293:
     group:
-    - hades
+    - darkseid
     options:
       name: 54wolfman
   8b1ea473-d238-4ae6-b52e-b26e38302df9:
@@ -15999,7 +15999,7 @@ users:
       name: NoFearKing
   d39ddc52-5fdb-484e-8e0c-f538e7982bee:
     group:
-    - spiderwomangwenstacy
+    - hawkgirl
     options:
       name: Eyemakid
   b23253de-b89d-4ea4-8f9d-f8eaee9e2c37:
@@ -16272,7 +16272,7 @@ users:
       name: CaptainColdCW
   265566f8-a39e-4357-8256-bed3660845ad:
     group:
-    - mortal
+    - blackflash
     options:
       name: DaCybe
     permissions: []
@@ -16546,7 +16546,7 @@ users:
       name: machinegun05
   a03a3fc9-90d8-4847-bbaf-1013c2dd9ffa:
     group:
-    - godfallsuperman
+    - carnage
     options:
       name: dragon311
   94782fec-cf49-4719-8841-9a9808e90f88:
@@ -16568,7 +16568,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - dannyphantom
+    - flashwallywest
     options:
       name: HerpaDerp10000
     permissions:
@@ -16583,6 +16583,11 @@ users:
     - silversurfer
     options:
       name: QuantumGalaxyy
+  2b8dcc7c-0f1b-419d-9285-3d993f2d8cdd:
+    group:
+    - greenlanternalanscott
+    options:
+      name: Lmgpro_silveon
 worlds:
   checkers:
     inheritance:
