--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,9 +1,9 @@
-storage: {_WonderBat_spouse: '"God_Doesnt_Exist"', topleft1: '4', topleft2: '1', topleft3: '2',
-  nullspouse: '""', testID3: '0', testID1: '9', topmiddle3: '1', testID2: '7', topmiddle2: '3',
-  nightghost2spouse: '"SS_HarleyQuinn"', bottomleft1: '0', bottomright3: '2', topmiddle1: '8',
-  bottomright1: '9', bottomright2: '4', ThatCraftLifespouse: '"Camulll"', southmachine1: '6',
-  bottomleft2: '2', bottomleft3: '0', northmachine2: '4', northmachine3: '5', SS_HarleyQuinnspouse: '"nightghost2"',
-  southmachine3: '4', southmachine2: '3', eastmachine1: '2', topright3: '2', topright2: '1',
-  topright1: '4', northmachine1: '5', bottommiddle1: '9', bottommiddle2: '7', mythguy1226spouse: '""',
-  bottommiddle3: '9', westmachine1: '6', eastmachine3: '2', eastmachine2: '3', westmachine3: '6',
-  westmachine2: '6', God_Doesnt_Existspouse: '"_WonderBat_"'}
+storage: {_WonderBat_spouse: '"God_Doesnt_Exist"', topleft1: '9', topleft2: '5', topleft3: '1',
+  nullspouse: '""', testID3: '0', testID1: '9', topmiddle3: '1', testID2: '7', topmiddle2: '0',
+  nightghost2spouse: '"SS_HarleyQuinn"', bottomleft1: '0', bottomright3: '9', topmiddle1: '6',
+  bottomright1: '3', bottomright2: '6', ThatCraftLifespouse: '"Camulll"', southmachine1: '6',
+  bottomleft2: '3', bottomleft3: '0', northmachine2: '4', northmachine3: '5', SS_HarleyQuinnspouse: '"nightghost2"',
+  southmachine3: '4', southmachine2: '3', eastmachine1: '2', topright3: '2', topright2: '3',
+  topright1: '7', northmachine1: '5', bottommiddle1: '4', bottommiddle2: '1', mythguy1226spouse: '""',
+  bottommiddle3: '0', westmachine1: '6', eastmachine3: '2', eastmachine2: '3', westmachine3: '6',
+  Camulllspouse: '"xDcGamer"', westmachine2: '6', God_Doesnt_Existspouse: '"_WonderBat_"'}
