--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,30 @@
 groups:
+  hippolytadc:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&6Hi&4pp&fol&6yta&8(&6D&4C&8)'
+      suffix: '&6'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.carryplayer
+        - ch.alias.dismountplayer
+        - essentials.speed
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.haste0
+        - ch.alias.haste1
+        - ch.alias.haste2
+        - ch.alias.haste3
+        - ch.alias.haste4
   harrypotter:
     inheritance:
     - commonherotraits
@@ -16568,7 +16594,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - flashwallywest
+    - bardock
     options:
       name: HerpaDerp10000
     permissions:
