--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -16594,7 +16594,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - bardock
+    - dannyphantom
     options:
       name: HerpaDerp10000
     permissions:
