--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1961,7 +1961,6 @@ groups:
         permissions:
         - powers.wallrun
         - ch.alias.speedforceteleport
-        - worldedit.navigation.thru.command
         - essentials.tppos
         - essentials.warps.speedforce
         - kill.immune
@@ -13620,7 +13619,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - flashbarryallen
+    - ironfist
     options:
       name: CorruptRacer
   8804c5af-7861-4d3b-ae26-750b4cf93f25:
@@ -14168,7 +14167,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - savitar
+    - blacklanterndeathstormraymondrusch
     options:
       name: nightghost2
     permissions:
@@ -16025,7 +16024,7 @@ users:
       name: NoFearKing
   d39ddc52-5fdb-484e-8e0c-f538e7982bee:
     group:
-    - hawkgirl
+    - thepresence
     options:
       name: Eyemakid
   b23253de-b89d-4ea4-8f9d-f8eaee9e2c37:
@@ -16357,7 +16356,7 @@ users:
       name: TheKairi
   a752d496-7d24-4764-87a3-a179f84e31ae:
     group:
-    - infinitysilversurfer
+    - mortal
     options:
       name: Scrachy10
   5f6efde4-f0b6-44fd-8427-96098276c6b7:
