--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -16613,6 +16613,9 @@ users:
     - greenlanternalanscott
     options:
       name: Lmgpro_silveon
+  10952298-6e5e-44bc-bbc8-e90c334e54b2:
+    group:
+    - spidermanpeterparker
 worlds:
   checkers:
     inheritance:
