--- a/Citizens/templates.yml
+++ b/Citizens/templates.yml
@@ -27,7 +27,7 @@ civilianpeterparker:
       usedefaultstuckaction: true       
     uuid: bfc9e44d-4e70-4544-8628-df9ce9be1bfe      
     traitnames: spawned,type,inventory,owner,gravity,location       
-    name: civilianpeterparker
+    name: Civilian Peter P{arker
 piccolo:    
   override: false    
   replacements:    
