--- a/Magic/spells.yml
+++ b/Magic/spells.yml
@@ -33,6 +33,7 @@
 #           xp: <xp/mana amount>
 #           <material_name>: <reagent amount>#      
 #       parameters:
+
 #           <specific spell parameters- TODO: list common ones>
 #
 
@@ -61,7 +62,10 @@
 # kill:
 #    costs:
 #       health: 10 
-
+confringo
+  grief:
+     enabled: false
+     
 rictusempra: 
      icon: diamond_axe:32 
      icon_disabled: diamond_hoe:32 
