--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -31,6 +31,11 @@ groups:
     options:
       prefix: '&4Har&6ry &4Pot&6ter'
       suffix: '&6'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.invis
+        - ch.alias.vis
   piccolo:
     inheritance:
     - commonherotraits
