--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8566,11 +8566,11 @@ groups:
         - ch.alias.haste1
         - ch.alias.haste2
         - ch.alias.haste3
-        civilianpeterparker:
+  civilianpeterparker:
     inheritance:
     - commonherotraits
     options:
-      prefix: '§4Civilian§fPe§4ter§0P§4ar§0k§4er'
+      prefix: '&4Civilian&fPe&4ter&0P&4ar&0k&4er'
       suffix: '&4'
     worlds:
       survival:
