--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10478,6 +10478,7 @@ users:
         - essentials.build.*
         - essentials.fly
     permissions:
+    - -chatcontrol.chat.format.color
     - is.secretary
     - -ch.alias.gc
   290fa262-f514-4a2c-b71a-2f39e22b345b:
