--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10478,6 +10478,7 @@ users:
         - essentials.build.*
         - essentials.fly
     permissions:
+    - change.chat
     - -chatcontrol.chat.format.color
     - is.secretary
     - -ch.alias.gc
@@ -11402,6 +11403,7 @@ users:
       prefix: ''
       suffix: ''
     permissions:
+    - -change.chat
     - is.married
     - -is.secretary
     - -mortal.machine
