--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -34,8 +34,8 @@ groups:
     worlds:
       survival:
         permissions:
-        - magic.wand.use
-        - magic.cast
+        - Magic.wand.use
+        - Magic.cast
   piccolo:
     inheritance:
     - commonherotraits
