--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -14080,7 +14080,7 @@ users:
       name: ii_Ashura
   ae107f34-4831-49c2-bfe8-0974342077e0:
     group:
-    - ultraboy
+    - trigon
     options:
       name: FunCaptianrex
     permissions:
@@ -16668,6 +16668,9 @@ users:
     - naruto
     options:
       name: IronRolay
+  0a5357e9-2f1e-4fc6-87cc-dc03d592bd20:
+    group:
+    - starlord
 worlds:
   checkers:
     inheritance:
