--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -6269,7 +6269,7 @@ groups:
     - multiverse.access.rollercoaster
     - chatformat.mortal
     - deluxechat.color
-    - -magic.*
+    - -magic.wand.craft
     - deluxechat.url
     - -essentials.warps.speedforce
     - multiverse.access.speedforce
