--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -349,7 +349,13 @@ groups:
         - ch.alias.haste0
         - ch.alias.haste1
         - ch.alias.haste2
-  dormammu:
+ intangible:/intangible = >>>
+    sudo(/gm 3)
+<<<
+tangible:/tangible = >>>
+    sudo(/gms)
+<<<
+ dormammu:
     inheritance:
     - commonherotraits
     options:
