--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -349,12 +349,8 @@ groups:
         - ch.alias.haste0
         - ch.alias.haste1
         - ch.alias.haste2
- intangible:/intangible = >>>
-    sudo(/gm 3)
-<<<
-tangible:/tangible = >>>
-    sudo(/gms)
-<<<
+        - /intangible
+        - /tangible
  dormammu:
     inheritance:
     - commonherotraits
