--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -6270,6 +6270,7 @@ groups:
     - chatformat.mortal
     - deluxechat.color
     - -magic.wand.craft
+    - -magic.create.*
     - deluxechat.url
     - -essentials.warps.speedforce
     - multiverse.access.speedforce
