--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -6,7 +6,7 @@ groups:
       prefix: '&6Hi&4pp&fol&6yta&8(&6D&4C&8)'
       suffix: '&6'
     worlds:
-      survival:
+      survival: 
         permissions:
         - ch.alias.carryplayer
         - ch.alias.dismountplayer
@@ -18,7 +18,7 @@ groups:
         - ch.alias.jump4
         - ch.alias.run0
         - ch.alias.run1
-        - ch.alias.run2
+        - ch.alias.run2 
         - ch.alias.run3
         - ch.alias.haste0
         - ch.alias.haste1
@@ -349,8 +349,8 @@ groups:
         - ch.alias.haste0
         - ch.alias.haste1
         - ch.alias.haste2
-        - /intangible
-        - /tangible
+        - ch.alias.intangible
+        - ch.alias.tangible
  dormammu:
     inheritance:
     - commonherotraits
