--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -2374,6 +2374,30 @@ groups:
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
+  onslaught:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&5O&4nsl&5au&4g&5ht'
+      suffix: '&4'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.carryplayer
+        - ch.alias.dismountplayer
+        - ch.alias.onslaught
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.fly
+        - ch.alias.speed.fly
+        - ch.alias.speed
+        - ch.alias.mindcontrol
+        - ch.alias.mindlock
+        - ch.alias.intangible
+        - ch.alias.tangible
+        - ch.alias.disguise
   blackwidow:
     inheritance:
     - commonherotraits
